--- a/wcttt-gui/src/main/resources/fxml/view-teacher-period.fxml
+++ b/wcttt-gui/src/main/resources/fxml/view-teacher-period.fxml
@@ -37,6 +37,11 @@
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="rootPane" minHeight="100.0" minWidth="400.0" prefHeight="550.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wcttt.gui.controller.ViewTeacherPeriodController">
+   <left>
+	<Button fx:id="genButton" mnemonicParsing="false" prefWidth="100.0" text="create Matrix">
+        <Insets top="15" />
+    </Button>
+   </left>
    <center>
    <GridPane fx:id="matrix" alignment="center" hgap="10" vgap="10">
 	<padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
