--- a/wcttt-gui/src/main/resources/fxml/edit-generate-running.fxml
+++ b/wcttt-gui/src/main/resources/fxml/edit-generate-running.fxml
@@ -34,7 +34,7 @@
 
 <VBox prefHeight="120.0" prefWidth="400.0" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Timetable is being generated..." />
+      <Label fx:id="runningText"/>
       <ProgressBar fx:id="progressBar" progress="0.0" />
       <GridPane>
          <columnConstraints>
