--- a/wcttt-gui/src/main/resources/fxml/main.fxml
+++ b/wcttt-gui/src/main/resources/fxml/main.fxml
@@ -38,6 +38,7 @@
        <fx:include fx:id="sideMenu" source="main-sidemenu.fxml" />
    </left>
    <center>
+	   <fx:include fx:id="constraints" source="main-constraints.fxml" />
        <fx:include fx:id="timetableTable" source="main-table.fxml" />
    </center>
    <bottom>
