--- a/wcttt-gui/src/main/resources/fxml/main-constraints.fxml
+++ b/wcttt-gui/src/main/resources/fxml/main-constraints.fxml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
- WCT³ (WIAI Course Timetabling Tool) is a software that strives to automate
- the timetabling process at the WIAI faculty of the University of Bamberg.
-
- WCT³-GUI comprises functionality to view generated timetables, edit semester
- data and to generate new timetables.
-
- Copyright (C) 2018 Nicolas Gross
-
- This program is free software: you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation, either version 3 of the License, or
- (at your option) any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program.  If not, see <http://www.gnu.org/licenses/>.
--->
-
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-
-<ScrollPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wcttt.gui.controller.MainConstraintsController">
-   <content>
-	<VBox fx:id="dropBox" fillWidth="false" />
-	<Button fx:id="swapButton" mnemonicParsing="false" prefWidth="80.0" text="Swap" textFill="#c90000" />
-    <Button fx:id="violationsButton" mnemonicParsing="false" prefWidth="80.0" text="Show Penalty" />
-   </content>
-</ScrollPane>
+<VBox fx:id="constraints" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="wcttt.gui.controller.MainConstraintsController">
+   <children>
+      <GridPane vgap="5.0">
+          <rowConstraints>
+              <RowConstraints />
+              <RowConstraints />
+              <RowConstraints />
+              <RowConstraints />
+            <RowConstraints />
+          </rowConstraints>
+          <children>
+              <Label text="Constraint Violations:" underline="true" GridPane.rowIndex="1"/>
+			  <ListView fx:id="listView" prefHeight="50.0" prefWidth="200.0" GridPane.rowIndex="2">
+			  </ListView>
+			  <Button fx:id="swapButton" mnemonicParsing="false" prefWidth="80.0" text="Swap" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+              <Button fx:id="violationsButton" mnemonicParsing="false" prefWidth="120.0" text="Show Penalties" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+          </children>
+          <columnConstraints>
+              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
+              <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" />
+          </columnConstraints>
+          <padding>
+              <Insets left="5.0" right="5.0" />
+          </padding>
+      </GridPane>
+   </children>
+</VBox>
