constraint ListView now updates the selected assignments

--- a/wcttt-gui/src/main/resources/fxml/main-constraints.fxml
+++ b/wcttt-gui/src/main/resources/fxml/main-constraints.fxml
@@ -22,8 +22,7 @@
           </rowConstraints>
           <children>
               <Label text="Constraint Violations:" underline="true" GridPane.rowIndex="1"/>
-			  <ListView fx:id="listView" prefHeight="50.0" prefWidth="200.0" GridPane.rowIndex="2">
-			  </ListView>
+			  <VBox fx:id="vbox" GridPane.rowIndex="2" />
 			  <Button fx:id="swapButton" mnemonicParsing="false" prefWidth="80.0" text="Swap" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
               <Button fx:id="violationsButton" mnemonicParsing="false" prefWidth="120.0" text="Show Penalties" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
           </children>
